Add getDeclaredConstructor() to fix method deprecation